--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
@@ -2,7 +2,7 @@
 /**
  * 资产 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-13 13:57:22
+ * @since 2021-08-14 19:44:13
  */
  -->
  <!DOCTYPE html>
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}"/>
     <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
     <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
+    <style>
+    </style>
 </head>
 
 <body style="overflow-y: hidden">
@@ -42,7 +44,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('分类')}">分类</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
-                            <div id="categoryId" th:data="${'/service-eam/eam-category/query-paged-list'}"></div>
+                            <div id="categoryId" input-type="select" th:data="${'/service-eam/eam-category/query-paged-list'}"></div>
                         </div>
                     </div>
 
@@ -51,7 +53,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('状态')}">状态</div></div>
                         <div class="layui-input-block ">
-                            <div id="status" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}"></div>
+                            <div id="status" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}"></div>
                         </div>
                     </div>
 
@@ -60,7 +62,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('物品档案')}">物品档案</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
-                            <div id="goodsId" th:data="${'/service-eam/eam-goods/query-list'}"></div>
+                            <div id="goodsId" input-type="select" th:data="${'/service-eam/eam-goods/query-list'}"></div>
                         </div>
                     </div>
 
@@ -101,7 +103,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('厂商')}">厂商</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
-                            <div id="manufacturerId" th:data="${'/service-eam/eam-manufacturer/query-list'}"></div>
+                            <div id="manufacturerId" input-type="select" th:data="${'/service-eam/eam-manufacturer/query-list'}"></div>
                         </div>
                     </div>
 
@@ -119,7 +121,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('品牌')}">品牌</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
-                            <div id="brandId" th:data="${'/service-eam/eam-brand/query-list'}"></div>
+                            <div id="brandId" input-type="select" th:data="${'/service-eam/eam-brand/query-list'}"></div>
                         </div>
                     </div>
 
@@ -142,7 +144,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('来源')}">来源</div></div>
                         <div class="layui-input-block ">
-                            <div id="sourceId" th:data="${dict.toArray('eam_source')}"></div>
+                            <div id="sourceId" input-type="select" th:data="${dict.toArray('eam_source')}"></div>
                         </div>
                     </div>
 
@@ -160,7 +162,7 @@
                 <div class="layui-form-item" >
                     <div class="layui-form-label "><div th:text="${lang.translate('图片')}">图片</div></div>
                     <div class="layui-upload layui-input-block ">
-                        <input id="pictureId"  name="pictureId" lay-filter="pictureId" style="display: none">
+                        <input input-type="upload" id="pictureId"  name="pictureId" lay-filter="pictureId" style="display: none">
                         <button type="button" class="layui-btn" id="pictureId-button" th:text="${lang.translate('选择附件')}">选择附件</button>
                         <div class="layui-upload-list" id="pictureId-file-list"></div>
                     </div>
@@ -244,7 +246,7 @@
 </div>
 
 <div class="model-form-footer">
-    <button class="layui-btn layui-btn-primary" id="cancel-button" lay-filter="cancel-button" type="button" th:text="${lang.translate('取消')}">取消</button>
+    <button class="layui-btn layui-btn-primary" id="cancel-button" lay-filter="cancel-button" type="button" th:text="${lang.translate('取消')}" >取消</button>
     <button th:if="${perm.checkAnyAuth('eam_asset:create','eam_asset:update','eam_asset:save')}" class="layui-btn" style="margin-right: 15px"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
 </div>
 
